--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
           </li>
 
           <li>
-            <a href="#top" class="footer-link">Welllness</a>
+            <a href="#top" class="footer-link">Blog</a>
           </li>
 
           <li>
@@ -600,12 +600,11 @@
               <a href="contact.html#map">
               <ion-icon name="location" aria-hidden="true"></ion-icon></a>
             </div>
-            
+
             <address class="address footer-link">
               Fridhemsgatan 28, 112 40 Stockholm, Sweden
               (Inside Danshuset)
             </address>
-            
           </li>
 
           <li class="footer-list-item">
@@ -631,19 +630,25 @@
 
         <ul class="footer-list">
           <li>
-            <p class="footer-list-title has-before">Our Newsletter</p>
+            <p class="footer-list-title has-before">Tripadvisor Ranking</p>
           </li>
 
           <li>
-            <form action="" class="footer-form">
-              <input type="email" name="email_address" aria-label="email" placeholder="Email Address" required
-                class="input-field">
-
-              <button type="submit" class="btn btn-primary " aria-label="Submit">
-                <ion-icon name="chevron-forward-sharp" aria-hidden="true"></ion-icon>
-              </button>
-            </form>
+            <div id="TA_selfserveprop612" class="TA_selfserveprop"><ul id="BW5Fht7U4K3" class="TA_links R7tpLWkA4"><li id="uUooLc" class="a6i5suQ8"><a target="_blank" href="https://www.tripadvisor.com/Attraction_Review-g189852-d12631041-Reviews-Let_s_Relax_Stockholm-Stockholm.html"><img src="https://www.tripadvisor.com/img/cdsi/img2/branding/v2/Tripadvisor_lockup_horizontal_secondary_registered-11900-2.svg" alt="TripAdvisor"/></a></li></ul></div>
           </li>
+
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <div class="container">
+
+        <p class="copyright">
+          &copy; 2024 F.I.T and Welllness| All Rights Reserved By <a href="#" class="copyright-link">Kunnikar Boonbunlu</a>
+        </p>
+
+        <ul class="footer-bottom-list">
 
           <li>
             <ul class="social-list">
@@ -668,32 +673,10 @@
             </ul>
           </li>
         </ul>
-      </div>
-    </div>
-
-    <div class="footer-bottom">
-      <div class="container">
-
-        <p class="copyright">
-          &copy; 2024 F.I.T and Welllness| All Rights Reserved By <a href="#" class="copyright-link">Kunnikar Boonbunlu</a>
-        </p>
-
-        <ul class="footer-bottom-list">
-
-          <li>
-            <a href="#" class="footer-bottom-link has-before">Privacy Policy</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-bottom-link has-before">Terms & Condition</a>
-          </li>
-
-        </ul>
 
       </div>
     </div>
   </footer>
-
   <!-- 
     - #BACK TO TOP
   -->
